// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FixedGridRow /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      TEST_CLASSNAME
      {
        display: flex;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with bottom spacing matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
        margin-bottom: 2rem;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with default options matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with gutter size matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
      }
>
  grid content
</div>
`;
